2008-06-05  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: We need to calculate the scrollbars even if the handle
	hasn't been created - this is needed when methods using scrollbars
	info, such EnsureVisible, are called before control has been created.
	Fixes #397272.

2008-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeVisualStyles.cs: ScrollBar is now rendered with the VisualStyles API
	only if the elements are defined. 

2008-06-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: I'm an idiiot - forgot to commit the last ComboBox
	section. Also, when setting bounds, snap height as well as save the
	requested height if Dock has any value affecting the height: Left,
	Right and Bottom - important if using IntegralHeight as true.

2008-06-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ComboBox.cs: When calling UpdateComboBoxBounds, adjust the height
	passed to SetBounds to reflect the new adjusted height (Integral-wise), 
	instead of doing that only in our SetBoundsCore override, since the 
	bounds cached can be the same as saved one and we could not get the
	new height applied.
	Fixes #396297.

2008-06-04  George Giolfan  <georgegiolfan@yahoo.com>

	* Theme.cs: Made ToolWindowCaptionButtonSize platform dependent.
	* XplatUI.cs: Added ToolWindowCaptionButtonSize.
	* XplatUIDriver.cs: Changed SmallCaptionButtonSize to 15,15. Added
	ToolWindowCaptionButtonSize.
	* XplatUIWin32.cs: Added ToolWindowCaptionButtonSize.

2008-06-04  George Giolfan  <georgegiolfan@yahoo.com>

	* MdiWindowManager.cs: Now uses SystemInformation.DoubleClickTime instead of
	hard coded values.
	* Theme.cs: Made DoubleClickTime plaform dependent.

2008-06-04  George Giolfan  <georgegiolfan@yahoo.com>

	* Theme.cs: Made ToolWindowCaptionHeight platform dependent.
	* XplatUI.cs, XplatUIDriver.cs, XplatUIWin32.cs: Added
	ToolWindowCaptionHeight.

2008-06-04  George Giolfan  <georgegiolfan@yahoo.com>
